Добавлено заполнение жанров в методе поиска общих фильмов. Изменен метод в контроллере @Min(1) -> @Positive